force-app/main/default/objects/TransfererBankAccount__mdt/TransfererBankAccount__mdt.object-meta.xml
<CustomObject>
    <label>送金元口座</label>
</CustomObject>