force-app/main/default/objects/TransfererBankAccount__mdt/fields/BankAccountId__c.field-meta.xml
<CustomField>
    <fullName>BankAccountId__c</fullName>
    <label>口座ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>