force-app/main/default/objects/TransfererBankAccount__mdt/fields/BankCode__c.field-meta.xml
<CustomField>
    <fullName>BankCode__c</fullName>
    <label>銀行コード</label>
    <length>4</length>
    <type>Text</type>
</CustomField>