force-app/main/default/objects/TransfererBankAccount__mdt/fields/PaymentCategory__c.field-meta.xml
<CustomField>
    <fullName>PaymentCategory__c</fullName>
    <label>支払区分</label>
    <length>40</length>
    <type>Text</type>
</CustomField>